--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -5,6 +5,10 @@
 
     <data>
 
+        <import type="android.view.View" />
+
+        <import type="com.example.atomictowers.components.Game" />
+
         <variable
             name="viewModel"
             type="com.example.atomictowers.screens.game.GameViewModel" />
@@ -47,7 +51,7 @@
                 style="@style/GameText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Water"
+                android:text="@string/water"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="@+id/pause_button"
                 app:layout_constraintEnd_toStartOf="@+id/pause_button"
@@ -85,10 +89,11 @@
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/health_progress" />
+                app:layout_constraintTop_toBottomOf="@+id/health_progress"
+                tools:text="Energy:  15 J" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/towers_title_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -104,44 +109,132 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/energy_text" />
 
-            <ImageView
-                android:id="@+id/electron_shooter_sidebar"
+            <FrameLayout
+                android:id="@+id/electron_shooter_frame"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="24dp"
                 android:layout_weight="1"
-                android:background="@{viewModel.isElectronShooterSelected() ? @drawable/button_background : @drawable/transparent_background}"
-                android:contentDescription="@string/electron_shooter"
-                android:onClick="@{() -> viewModel.selectElectronShooter()}"
-                android:padding="8dp"
-                android:src="@drawable/electron_shooter"
-                app:layout_constraintBottom_toTopOf="@+id/photonic_laser_sidebar"
+                app:layout_constraintBottom_toTopOf="@+id/electron_shooter_price_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView2" />
+                app:layout_constraintTop_toBottomOf="@+id/towers_title_text">
 
-            <ImageView
-                android:id="@+id/photonic_laser_sidebar"
+                <ImageView
+                    android:id="@+id/electron_shooter_sidebar"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@{viewModel.isElectronShooterSelected() &amp;&amp; viewModel.energy >= Game.ELECTRON_SHOOTER_PRICE ? @drawable/button_background : @drawable/transparent_background}"
+                    android:clickable="@{viewModel.energy &lt; Game.ELECTRON_SHOOTER_PRICE ? false : true}"
+                    android:contentDescription="@string/electron_shooter"
+                    android:onClick="@{() -> viewModel.selectElectronShooter()}"
+                    android:src="@drawable/electron_shooter" />
+
+                <TextView
+                    android:id="@+id/electron_shooter_foreground"
+                    style="@style/GameText.Bold"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/disabled_tower_foreground"
+                    android:gravity="center"
+                    android:lineSpacingMultiplier="1.2"
+                    android:text="@string/not_enough_energy"
+                    android:textSize="12sp"
+                    android:visibility="@{viewModel.energy &lt; Game.ELECTRON_SHOOTER_PRICE ? View.VISIBLE : View.GONE}"
+                    tools:visibility="visible" />
+
+            </FrameLayout>
+
+
+            <TextView
+                android:id="@+id/electron_shooter_price_text"
+                style="@style/GameText.Bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/button_background"
+                android:gravity="center"
+                android:paddingStart="8dp"
+                android:paddingTop="4dp"
+                android:paddingEnd="8dp"
+                android:paddingBottom="4dp"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toTopOf="@+id/photonic_laser_frame"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/electron_shooter_frame"
+                tools:text="15 J" />
+
+            <FrameLayout
+                android:id="@+id/photonic_laser_frame"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
                 android:layout_weight="1"
-                android:background="@{viewModel.isPhotonicLaserSelected() ? @drawable/button_background : @drawable/transparent_background}"
-                android:onClick="@{() -> viewModel.selectPhotonicLaser()}"
-                android:padding="8dp"
-                android:src="@drawable/photonic_laser"
+                app:layout_constraintBottom_toTopOf="@+id/photonic_laser_price_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/electron_shooter_price_text">
+
+                <ImageView
+                    android:id="@+id/photonic_laser_sidebar"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@{viewModel.isPhotonicLaserSelected() &amp;&amp; viewModel.energy >= Game.PHOTONIC_LASER_PRICE ? @drawable/button_background : @drawable/transparent_background}"
+                    android:clickable="@{viewModel.energy &lt; Game.PHOTONIC_LASER_PRICE ? false : true}"
+                    android:contentDescription="@string/photonic_laser"
+                    android:onClick="@{() -> viewModel.selectPhotonicLaser()}"
+                    android:padding="2dp"
+                    android:src="@drawable/photonic_laser"
+                    tools:ignore="ContentDescription" />
+
+                <TextView
+                    android:id="@+id/photonic_laser_foreground"
+                    style="@style/GameText.Bold"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/disabled_tower_foreground"
+                    android:gravity="center"
+                    android:lineSpacingMultiplier="1.2"
+                    android:padding="8dp"
+                    android:text="@string/not_enough_energy"
+                    android:textSize="12sp"
+                    android:visibility="@{viewModel.energy &lt; Game.PHOTONIC_LASER_PRICE ? View.VISIBLE : View.GONE}" />
+
+            </FrameLayout>
+
+            <TextView
+                android:id="@+id/photonic_laser_price_text"
+                style="@style/GameText.Bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/button_background"
+                android:gravity="center"
+                android:paddingStart="8dp"
+                android:paddingTop="4dp"
+                android:paddingEnd="8dp"
+                android:paddingBottom="4dp"
+                android:textSize="12sp"
+                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/electron_shooter_sidebar"
-                tools:ignore="ContentDescription" />
+                app:layout_constraintTop_toBottomOf="@+id/photonic_laser_frame"
+                tools:text="20 J" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
